--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -19,75 +19,89 @@
 
     <EditText
         android:id="@+id/editTextText"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:ems="10"
-        android:paddingHorizontal="10dp"
+        android:ems="100"
         android:inputType="text"
+        android:paddingHorizontal="10dp"
         android:text="This is Text" />
 
     <EditText
         android:id="@+id/textPersonName"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:ems="10"
-        android:paddingHorizontal="10dp"
+        android:ems="100"
         android:inputType="textPersonName"
+        android:paddingHorizontal="10dp"
         android:text="This is TextPersonName" />
 
     <EditText
         android:id="@+id/editTextPhone"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:ems="10"
-        android:paddingHorizontal="10dp"
+        android:ems="100"
         android:inputType="phone"
+        android:paddingHorizontal="10dp"
         android:text="This is Phone" />
 
     <EditText
         android:id="@+id/editTextNumber"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:ems="10"
-        android:paddingHorizontal="10dp"
+        android:ems="100"
         android:inputType="number"
+        android:paddingHorizontal="10dp"
         android:text="This is Number" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:ems="10"
-        android:paddingHorizontal="10dp"
+        android:ems="100"
         android:inputType="textPassword"
+        android:paddingHorizontal="10dp"
         android:text="This is TextP@ssword" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:ems="10"
-        android:paddingHorizontal="10dp"
+        android:ems="20"
         android:inputType="textEmailAddress"
-        android:onClick="calendar"
-        android:text="This is TextEmailAddress" />
+        android:paddingHorizontal="10dp"
+        android:text="This is TextEmailAddress"
+        />
+
+    <EditText
+        android:id="@+id/editTextTextMultiLine"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.3"
+        android:ems="10"
+        android:gravity="start|top"
+        android:inputType="textMultiLine" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.1" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:layout_marginVertical="10dp">
 
         <EditText
             android:id="@+id/editTextDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:ems="10"
             android:inputType="date"
             android:paddingHorizontal="10dp"
@@ -97,7 +111,6 @@
             android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:onClick="calendar"
             android:text="Calendar" />
 
