lesson 2.2 new init

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,275 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wing_light_abstract_black_and_white_architecture_white_18153_pxhere_com"
-    tools:context=".MainActivity">
+    android:background="@drawable/wing_light_abstract_black_and_white_architecture_white_18153_pxhere_com">
 
-    <Button
-        android:id="@+id/button"
-        style="@android:style/Widget.DeviceDefault.Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="324dp"
-        android:text="1"
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="@dimen/layout_marginStart"
+        android:layout_marginTop="@dimen/layout_marginStart"
+        android:layout_marginEnd="@dimen/layout_marginStart"
+        android:layout_marginBottom="@dimen/layout_marginStart"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/Button_1"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/Button_8"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:text="8"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/Button_coma"
+        app:layout_constraintEnd_toStartOf="@+id/Button_9"
+        app:layout_constraintStart_toEndOf="@+id/Button_7"
+        app:layout_constraintTop_toBottomOf="@+id/Button_5" />
+
+    <Button
+        android:id="@+id/Button_1"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/layout_marginStart"
+        android:layout_marginTop="@dimen/layout_marginTop"
+        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:fontFamily="sans-serif"
+        android:text="1"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/Button_4"
+        app:layout_constraintEnd_toStartOf="@+id/Button_2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/Button_2"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginTop="@dimen/layout_marginTop"
+        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:text="2"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/Button_5"
+        app:layout_constraintEnd_toStartOf="@+id/Button_3"
+        app:layout_constraintStart_toEndOf="@+id/Button_1"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/Button_4"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/layout_marginStart"
+        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:text="4"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/Button_7"
+        app:layout_constraintEnd_toStartOf="@+id/Button_5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Button_1" />
+
+    <Button
+        android:id="@+id/Button_5"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:text="5"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/Button_8"
+        app:layout_constraintEnd_toStartOf="@+id/Button_6"
+        app:layout_constraintStart_toEndOf="@+id/Button_4"
+        app:layout_constraintTop_toBottomOf="@+id/Button_2" />
+
+    <Button
+        android:id="@+id/Button_7"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/layout_marginStart"
+        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:text="7"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/Button_0"
+        app:layout_constraintEnd_toStartOf="@+id/Button_8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Button_4" />
+
+    <Button
+        android:id="@+id/Button_3"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginTop="@dimen/layout_marginTop"
+        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:text="3"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/Button_6"
+        app:layout_constraintEnd_toStartOf="@+id/Button_plus"
+        app:layout_constraintStart_toEndOf="@+id/Button_2"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/Button_6"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:text="6"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/Button_9"
+        app:layout_constraintEnd_toStartOf="@+id/Button1_multiplication"
+        app:layout_constraintStart_toEndOf="@+id/Button_5"
+        app:layout_constraintTop_toBottomOf="@+id/Button_3" />
+
+    <Button
+        android:id="@+id/Button_9"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:text="9"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/Button_equals"
+        app:layout_constraintEnd_toStartOf="@+id/Button_minus"
+        app:layout_constraintStart_toEndOf="@+id/Button_8"
+        app:layout_constraintTop_toBottomOf="@+id/Button_6" />
+
+    <Button
+        android:id="@+id/Button_0"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/layout_marginStart"
+        android:layout_marginBottom="@dimen/layout_marginBottomEnd"
+        android:text="0"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/Button_coma"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Button_7" />
+
+    <Button
+        android:id="@+id/Button_coma"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginBottom="@dimen/layout_marginBottomEnd"
+        android:text=","
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/Button_equals"
+        app:layout_constraintStart_toEndOf="@+id/Button_0"
+        app:layout_constraintTop_toBottomOf="@+id/Button_8" />
+
+    <Button
+        android:id="@+id/Button_equals"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginBottom="@dimen/layout_marginBottomEnd"
+        android:text="="
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/Button_division"
+        app:layout_constraintStart_toEndOf="@+id/Button_coma"
+        app:layout_constraintTop_toBottomOf="@+id/Button_9" />
+
+    <Button
+        android:id="@+id/Button_minus"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginEnd="@dimen/layout_marginEnd"
+        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:text="-"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/Button_division"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/Button_9"
+        app:layout_constraintTop_toBottomOf="@id/Button1_multiplication" />
+
+    <Button
+        android:id="@+id/Button_plus"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginTop="@dimen/layout_marginTop"
+        android:layout_marginEnd="@dimen/layout_marginEnd"
+        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:text="+"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/Button1_multiplication"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/Button_3"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/Button1_multiplication"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginEnd="@dimen/layout_marginEnd"
+        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:text="*"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/Button_minus"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/Button_9"
+        app:layout_constraintTop_toBottomOf="@+id/Button_plus" />
+
+    <Button
+        android:id="@+id/Button_division"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginEnd="@dimen/layout_marginEnd"
+        android:layout_marginBottom="@dimen/layout_marginBottomEnd"
+        android:text="/"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/Button_equals"
+        app:layout_constraintTop_toBottomOf="@+id/Button_minus" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
