Lesson2 end check

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wing_light_abstract_black_and_white_architecture_white_18153_pxhere_com">
+    android:background="@drawable/fantasy_4339663_1280">
 
-    <TextView
-        android:id="@+id/textView3"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginStart="@dimen/layout_marginStart"
-        android:layout_marginTop="@dimen/layout_marginStart"
-        android:layout_marginEnd="@dimen/layout_marginStart"
-        android:layout_marginBottom="@dimen/layout_marginStart"
-        android:textColor="@android:color/holo_red_light"
-        android:textSize="@dimen/button_textSize"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/Button_1"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/layout_height_textView"
+                android:layout_marginStart="@dimen/layout_marginStart_button"
+                android:layout_marginTop="@dimen/layout_marginEnd_button"
+                android:layout_marginEnd="@dimen/layout_marginStart_button"
+                android:layout_marginBottom="@dimen/layout_marginEnd_button"
+                android:background="@android:drawable/screen_background_dark_transparent"
+                android:text="@string/text_textView"
+                android:textAlignment="viewEnd"
+                android:textColor="@android:color/background_light"
+                android:textSize="@dimen/button_textSize"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+    </ScrollView>
 
     <Button
         android:id="@+id/Button_8"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:layout_marginBottom="@dimen/layout_margin_button"
         android:text="8"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/Button_coma"
@@ -42,12 +56,12 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginStart="@dimen/layout_marginStart"
-        android:layout_marginTop="@dimen/layout_marginTop"
-        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:layout_marginStart="@dimen/layout_marginStart_button"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginBottom="@dimen/layout_margin_button"
         android:fontFamily="sans-serif"
         android:text="1"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/Button_4"
@@ -60,10 +74,10 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/layout_marginTop"
-        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginBottom="@dimen/layout_margin_button"
         android:text="2"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/Button_5"
@@ -76,10 +90,10 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginStart="@dimen/layout_marginStart"
-        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:layout_marginStart="@dimen/layout_marginStart_button"
+        android:layout_marginBottom="@dimen/layout_margin_button"
         android:text="4"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/Button_7"
@@ -92,9 +106,9 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:layout_marginBottom="@dimen/layout_margin_button"
         android:text="5"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/Button_8"
@@ -107,10 +121,10 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginStart="@dimen/layout_marginStart"
-        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:layout_marginStart="@dimen/layout_marginStart_button"
+        android:layout_marginBottom="@dimen/layout_margin_button"
         android:text="7"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/Button_0"
@@ -123,10 +137,10 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/layout_marginTop"
-        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginBottom="@dimen/layout_margin_button"
         android:text="3"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/Button_6"
@@ -139,9 +153,9 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:layout_marginBottom="@dimen/layout_margin_button"
         android:text="6"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/Button_9"
@@ -154,9 +168,9 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:layout_marginBottom="@dimen/layout_margin_button"
         android:text="9"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/Button_equals"
@@ -169,10 +183,10 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginStart="@dimen/layout_marginStart"
-        android:layout_marginBottom="@dimen/layout_marginBottomEnd"
+        android:layout_marginStart="@dimen/layout_marginStart_button"
+        android:layout_marginBottom="@dimen/layout_marginBottomEnd_button"
         android:text="0"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -185,9 +199,9 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginBottom="@dimen/layout_marginBottomEnd"
+        android:layout_marginBottom="@dimen/layout_marginBottomEnd_button"
         android:text=","
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -200,9 +214,9 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginBottom="@dimen/layout_marginBottomEnd"
+        android:layout_marginBottom="@dimen/layout_marginBottomEnd_button"
         android:text="="
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -215,10 +229,10 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginEnd="@dimen/layout_marginEnd"
-        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:layout_marginEnd="@dimen/layout_marginEnd_button"
+        android:layout_marginBottom="@dimen/layout_margin_button"
         android:text="-"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/Button_division"
@@ -231,11 +245,11 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/layout_marginTop"
-        android:layout_marginEnd="@dimen/layout_marginEnd"
-        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:layout_marginTop="@dimen/layout_marginTop_button"
+        android:layout_marginEnd="@dimen/layout_marginEnd_button"
+        android:layout_marginBottom="@dimen/layout_margin_button"
         android:text="+"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/Button1_multiplication"
@@ -248,10 +262,10 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginEnd="@dimen/layout_marginEnd"
-        android:layout_marginBottom="@dimen/layout_marginButton"
+        android:layout_marginEnd="@dimen/layout_marginEnd_button"
+        android:layout_marginBottom="@dimen/layout_margin_button"
         android:text="*"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/Button_minus"
@@ -264,10 +278,10 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginEnd="@dimen/layout_marginEnd"
-        android:layout_marginBottom="@dimen/layout_marginBottomEnd"
+        android:layout_marginEnd="@dimen/layout_marginEnd_button"
+        android:layout_marginBottom="@dimen/layout_marginBottomEnd_button"
         android:text="/"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
