--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,10 +2,11 @@
 <resources>
     <dimen name="button_width">70dp</dimen>
     <dimen name="button_height">60dp</dimen>
-    <dimen name="layout_marginButton">13dp</dimen>
-    <dimen name="layout_marginTop">380dp</dimen>
-    <dimen name="layout_marginEnd">10dp</dimen>
-    <dimen name="layout_marginStart">10dp</dimen>
-    <dimen name="layout_marginBottomEnd">112dp</dimen>
+    <dimen name="layout_margin_button">13dp</dimen>
+    <dimen name="layout_marginTop_button">380dp</dimen>
+    <dimen name="layout_marginEnd_button">10dp</dimen>
+    <dimen name="layout_marginStart_button">10dp</dimen>
+    <dimen name="layout_marginBottomEnd_button">112dp</dimen>
     <dimen name="button_textSize">28sp</dimen>
+    <dimen name="layout_height_textView">315dp</dimen>
 </resources>
